k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kartol-app-production-service
  namespace: kartol-production
  labels:
    app: kartol-app-production
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/actuator/prometheus"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: metrics
  selector:
    app: kartol-app-production
